# PUC-GCES-PY

./: Dockerfile  Dockerfile.db  README.md  conf.py  docker-compose.yml  index.rst  pyproject.toml
.github/workflows/: CI_PY  CI_PY.yml
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
data/metabase/metabase.db/: metabase.db.mv.db  metabase.db.trace.db
data/mongodb/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-2102179155616224333.wt  collection-2-2102179155616224333.wt  collection-7-2102179155616224333.wt  index-1-2102179155616224333.wt  index-3-2102179155616224333.wt  index-8-2102179155616224333.wt  index-9-2102179155616224333.wt  sizeStorer.wt
data/mongodb/diagnostic.data/: metrics.2023-12-04T13-38-43Z-00000  metrics.2023-12-04T13-39-22Z-00000  metrics.2023-12-04T13-45-22Z-00000  metrics.2023-12-04T13-45-46Z-00000  metrics.2023-12-04T13-46-50Z-00000  metrics.2023-12-04T13-47-57Z-00000  metrics.2023-12-04T13-48-27Z-00000  metrics.2023-12-04T13-51-02Z-00000  metrics.2023-12-04T13-59-08Z-00000  metrics.2023-12-04T14-01-32Z-00000  (+5 more)
html/: md__c_o_d_e___o_f___c_o_n_d_u_c_t.html  md__c_o_n_t_r_i_b_u_t_i_n_g.html  md__r_e_a_d_m_e.html  pages.html
html/search/: all_10.js  all_11.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  pages_0.js  searchdata.js
latex/: md__c_o_d_e___o_f___c_o_n_d_u_c_t.tex  md__c_o_n_t_r_i_b_u_t_i_n_g.tex  md__r_e_a_d_m_e.tex  refman.tex
(+4 files in other folders)
