[tool.poetry]
name = "src"
version = "0.1.0"
description = "Trabalho de gerencia de config"
authors = ["Pedro Aires <pedro.santos.1212436@sga.pucminas.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
